--- a/docs/quickstarts/javascript.mdx
+++ b/docs/quickstarts/javascript.mdx
@@ -41,31 +41,29 @@ At the root of your project, install the ClerkJS package using your package mana
 ```html
 <script>
   // Get this URL from the Clerk Dashboard
-  const frontendApi = '[your-domain].clerk.accounts.dev';
+  const frontendApiUrl = '[your-domain].clerk.accounts.dev';
   const version = '@latest'; // Set to appropriate version
 
   // Creates asynchronous script
   const script = document.createElement('script');
   script.async = true;
-  script.src = `https://${frontendApi}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
+  script.src = `https://${frontendApiUrl}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
   document.body.appendChild(script);
 </script>
 ```
 
 ### Set environment keys
 
-To use the ClerkJS package, you'll need your **Publishable Key** and your **Frontend API URL**. If you are signed into your Clerk Dashboard, your **Publishable key** should be visible below. Otherwise, you can find these values in the Clerk Dashboard on the **[API Keys](https://dashboard.clerk.com/last-active?path=api-keys)** page. On this page, click on the **Advanced** dropdown to find your **Frontend API URL**. 
+To use the ClerkJS package, you'll need your **Publishable Key** and your **Frontend API URL**. If you are signed into your Clerk Dashboard, your **Publishable key** should be visible below. Otherwise, you can find these values in the Clerk Dashboard on the **[API Keys](https://dashboard.clerk.com/last-active?path=api-keys)** page. On this page, click on the **Advanced** dropdown to find your **Frontend API URL**.
 
 <InjectKeys>
 
 ```sh filename=".env.local"
 REACT_APP_CLERK_PUBLISHABLE_KEY={{pub_key}}
-CLERK_FRONTEND_API=[your-domain].clerk.accounts.dev
+CLERK_FRONTEND_API_URL=[your-domain].clerk.accounts.dev
 ```
 
 </InjectKeys>
-
-> We suggest storing these keys in environment variables using a `.env` file or equivalent.
 
 ### Setup the Clerk class
 
@@ -91,13 +89,13 @@ await clerk.load({
 ```html filename="index.html"
 <script>
   const clerkPublishableKey = `{{pub_key}}`;
-  const frontendApi = '[your-domain].clerk.accounts.dev';
+  const frontendApiUrl = '[your-domain].clerk.accounts.dev';
   const version = '@latest';
   const script = document.createElement('script');
-  script.setAttribute('data-clerk-frontend-api', frontendApi);
+  script.setAttribute('data-clerk-frontend-api', frontendApiUrl);
   script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
   script.async = true;
-  script.src = `https://${frontendApi}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
+  script.src = `https://${frontendApiUrl}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
 
   // Adds listener to initialize ClerkJS after it's loaded
   script.addEventListener('load', async function () {
