--- a/docs/references/javascript/overview.mdx
+++ b/docs/references/javascript/overview.mdx
@@ -71,10 +71,10 @@ Add the following script to your site's `<body>` element:
 
   // Creates asynchronous script
   const script = document.createElement('script');
-  script.setAttribute('data-clerk-frontend-api', frontendApi);
+  script.setAttribute('data-clerk-frontend-api', frontendApiUrl);
   script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
   script.async = true;
-  script.src = `https://${frontendApi}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
+  script.src = `https://${frontendApiUrl}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
 
   // Adds listener to initialize ClerkJS after it's loaded
   script.addEventListener('load', async function () {
