--- a/docs/references/javascript/clerk/clerk.mdx
+++ b/docs/references/javascript/clerk/clerk.mdx
@@ -175,7 +175,7 @@ In addition to the methods listed above, the `Clerk` class also has the followin
 
 - [`getOrganization()`](/docs/references/javascript/clerk/organization-methods#get-organization)
 - [`createOrganization()`](/docs/references/javascript/clerk/organization-methods#create-organization)
-- [`getOrganizationMemberships()`](/docs/references/javascript/clerk/organization-methods#get-organization-memberships)
+- [`getOrganizationMemberships()` (deprecated)](/docs/references/javascript/clerk/organization-methods#get-organization-memberships)
 
 ### Redirect
 
