--- a/docs/quickstarts/javascript.mdx
+++ b/docs/quickstarts/javascript.mdx
@@ -41,13 +41,13 @@ At the root of your project, install the ClerkJS package using your package mana
 ```html
 <script>
   // Get this URL from the Clerk Dashboard
-  const frontendApi = '[your-domain].clerk.accounts.dev';
+  const frontendApiUrl = '[your-domain].clerk.accounts.dev';
   const version = '@latest'; // Set to appropriate version
 
   // Creates asynchronous script
   const script = document.createElement('script');
   script.async = true;
-  script.src = `https://${frontendApi}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
+  script.src = `https://${frontendApiUrl}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
   document.body.appendChild(script);
 </script>
 ```
@@ -60,12 +60,10 @@ To use the ClerkJS package, you'll need your **Publishable Key** and your **Fron
 
 ```sh filename=".env.local"
 REACT_APP_CLERK_PUBLISHABLE_KEY={{pub_key}}
-CLERK_FRONTEND_API=[your-domain].clerk.accounts.dev
+CLERK_FRONTEND_API_URL=[your-domain].clerk.accounts.dev
 ```
 
 </InjectKeys>
-
-> We suggest storing these keys in environment variables using an `.env` file or equivalent.
 
 ### Setup the Clerk class
 
@@ -91,13 +89,13 @@ await clerk.load({
 ```html filename="index.html"
 <script>
   const clerkPublishableKey = `{{pub_key}}`;
-  const frontendApi = '[your-domain].clerk.accounts.dev';
+  const frontendApiUrl = '[your-domain].clerk.accounts.dev';
   const version = '@latest';
   const script = document.createElement('script');
-  script.setAttribute('data-clerk-frontend-api', frontendApi);
+  script.setAttribute('data-clerk-frontend-api', frontendApiUrl);
   script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
   script.async = true;
-  script.src = `https://${frontendApi}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
+  script.src = `https://${frontendApiUrl}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
 
   // Adds listener to initialize ClerkJS after it's loaded
   script.addEventListener('load', async function () {
