--- a/docs/references/backend/overview.mdx
+++ b/docs/references/backend/overview.mdx
@@ -153,7 +153,7 @@ Invitation operations are exposed under `clerkClient.invitations`. The following
 
 - [`revokeInvitation()`](/docs/references/backend/invitations/revoke-invitation)
 
-## Email `create` operations
+## Email `create` operations (deprecated)
 
 <Callout type="danger">
   This operation is now deprecated. Clerk no longer supports sending Emails through Clerk's backend API.
