Remove references to createEmail function (#620)
Co-authored-by: Lennart <lekoarts@gmail.com>

--- a/docs/references/ruby/available-methods.mdx
+++ b/docs/references/ruby/available-methods.mdx
@@ -61,14 +61,18 @@ Verify the JWT and return the client.
 sdk.clients.verify_token("jwt")
 ```
 
-## [Emails](https://clerk.com/docs/reference/backend-api/tag/Email-and-SMS-Templates)
+## Emails
+
+<Callout type="danger">
+  This method is now deprecated. Clerk no longer supports sending Emails through Clerk's backend API.
+</Callout>
 
 Send an email message to an email address ID belonging to another user.
 
 ```ruby
 sdk.emails.create(
-    email_address_id: "ema_xyz", 
-    from_email_name: "noreply", 
+    email_address_id: "ema_xyz",
+    from_email_name: "noreply",
     subject: "Welcome",
     body: "<html>...</html>",
 )
