Remove references to createEmail function (#620)
Co-authored-by: Lennart <lekoarts@gmail.com>

--- a/docs/references/backend/overview.mdx
+++ b/docs/references/backend/overview.mdx
@@ -153,13 +153,11 @@ Invitation operations are exposed under `clerkClient.invitations`. The following
 
 - [`revokeInvitation()`](/docs/references/backend/invitations/revoke-invitation)
 
-## Email operations
+## Email `create` operations (deprecated)
 
-Email operations are exposed under `clerkClient.emails`. The following methods are available:
-
-### Email `create` operations
-
-- [`createEmail()`](/docs/references/backend/emails/create-email)
+<Callout type="danger">
+  This operation is now deprecated. Clerk no longer supports sending Emails through Clerk's backend API.
+</Callout>
 
 ## SMS message operations (deprecated)
 
