fix(v5-upgrade-guide): Update @clerk/nextjs env rename
https://github.com/clerk/javascript/pull/2374

--- a/docs/upgrade-guides/upgrading-from-v4-to-v5.mdx
+++ b/docs/upgrade-guides/upgrading-from-v4-to-v5.mdx
@@ -1016,6 +1016,7 @@ TODO
       role: 'admin' | 'basic_member' | 'guest_member'
     }
     ```
+- The `NEXT_PUBLIC_CLERK_JS` environment variable was renamed to `NEXT_PUBLIC_CLERK_JS_URL`. Make sure to update this in all environments (e.g. dev, staging, production).
 
 A couple of subpath imports have been removed. You should use `@clerk/nextjs` instead as the functionality stayed the same. In the case of the removed `@clerk/nextjs/api` subpath you can use `@clerk/clerk-sdk-node` instead.
 
