fix(v5-upgrade-guide): Fix @clerk/backend getOrganizationInvitationList example

--- a/docs/upgrade-guides/upgrading-from-v4-to-v5.mdx
+++ b/docs/upgrade-guides/upgrading-from-v4-to-v5.mdx
@@ -583,11 +583,11 @@ These changes may impact your style customization applied through the `appearanc
     - `import type { AuthenticateRequestOptions } from "@clerk/backend/internal"`
     
 
-- Replace `getPendingOrganizationInvitationList` with `getOrganizationInvitationList` and pass a `status` parameter.
+- Replace `organizations.getPendingOrganizationInvitationList` with `organizations.getOrganizationInvitationList` and pass a `status` parameter.
 
     ```diff
-    - getPendingOrganizationInvitationList({ ...params })
-    + getOrganizationInvitationList({ ...params, status: "pending" })
+    - clerkClient.organizations.getPendingOrganizationInvitationList({ ...params })
+    + clerkClient.organizations.getOrganizationInvitationList({ ...params, status: "pending" })
     ```
 
 - You need to pass a `Request` to the first argument of the `authenticateRequest()` method.
