fix(v5-upgrade-guide): Add `sessions.getToken()` return value change
https://github.com/clerk/javascript/pull/2539

--- a/docs/upgrade-guides/upgrading-from-v4-to-v5.mdx
+++ b/docs/upgrade-guides/upgrading-from-v4-to-v5.mdx
@@ -531,6 +531,23 @@ These changes may impact your style customization applied through the `appearanc
     + } = await clerkClient.organizations.getOrganizationList()
     ```
 
+- The `sessions.getToken()` return value has been update to return `{ data, errors }` instead of the `jwt` string.
+
+    ```diff
+    import { clerkClient } from '@clerk/nextjs';
+    import { clerkClient } from '@clerk/remix/ssr.server';
+    import { clerkClient } from '@clerk/fastify';
+    import { clerkClient } from '@clerk/clerk-sdk-node';
+    import { clerkClient } from 'gatsby-plugin-clerk/ssr';
+
+    import { createClerkClient } from '@clerk/backend';
+    clerkClient = createClerkClient({ secretKey: '...' });
+
+    - const jwtString = await clerkClient.sessions.getToken({ template: '...' });
+    + const { data, errors } = await clerkClient.sessions.getToken({ template: '...' });
+    + const jwtString = data?.jwt;
+    ```
+
 - `clockSkewInSeconds` was renamed to `clockSkewInMs` but the default value stayed the same. That change affects all methods related to `VerifyJwtOptions`. Some examples:
 
     ```diff filename="verifyJwt"
