--- a/docs/upgrade-guides/upgrading-from-v4-to-v5.mdx
+++ b/docs/upgrade-guides/upgrading-from-v4-to-v5.mdx
@@ -731,159 +731,307 @@ Some more niche use cases and their changes:
 
 ### `@clerk/localizations`
 
-The following changes need to be applied only if you are using a custom localization object. If you are using one of Clerk's default localizations, you just need to update to latest version of `@clerk/localizations`.
+If you're using Clerk's [localization feature](/docs/components/customization/localization) to provide your own localizations, you will need to update your data as the underlying structure has changed. If you're just using one of Clerk's default localizations (e.g. through `import { frFR } from "@clerk/localizations"`) you need to install the latest version of `@clerk/localizations`.
 
-- Add the following localization keys to your custom localization object. You can find the `en-US` values in the [en-US localization object](https://github.com/clerk/javascript/blob/main/packages/localizations/src/en-US.ts).
+The [en-US localization object](https://github.com/clerk/javascript/blob/main/packages/localizations/src/en-US.ts) has changed in three ways: New keys, deleted keys, and changed values.
 
-1. `formFieldInputPlaceholder__confirmDeletionUserAccount`
-2. `formButtonPrimary__verify`
-3. `signIn.forgotPassword.title`
-4. `signIn.forgotPassword.subtitle_email`
-5. `signIn.forgotPassword.subtitle_phone`
-6. `signIn.alternativeMethods.subtitle`
-7. `signIn.alternativeMethods.actionText`
-8. `userProfile.navbar.title`
-9. `userProfile.navbar.description`
-10. `userProfile.navbar.account`
-11. `userProfile.navbar.security`
-12. `userProfile.start.profileSection.primaryButton`
-13. `organizationProfile.navbar.title`
-14. `organizationProfile.navbar.description`
-15. `organizationProfile.navbar.general`
-16. `organizationProfile.navbar.members`
-17. `organizationProfile.start.headerTitle__general`
-18. `organizationProfile.start.profileSection.title`
-19. `organizationProfile.start.profileSection.primaryButton`
-20. `organizationProfile.start.profileSection.uploadAction__title`
-21. `organizationProfile.profilePage.domainSection.menuAction__verify`
-22. `organizationProfile.profilePage.domainSection.menuAction__remove`
-23. `organizationProfile.profilePage.domainSection.menuAction__manage`
-24. `organizationProfile.verifiedDomainPage.title`
-25. `unstable__errors.form_param_format_invalid__phone_number`
-26. `userProfile.mfaPhoneCodePage.backButton`
-27. `userProfile.mfaPhoneCodePage.successTitle`
-28. `userProfile.mfaPhoneCodePage.successMessage1`
-29. `userProfile.mfaPhoneCodePage.successMessage2`
+<Accordion titles={["New localization keys", "Deleted localization keys", "Changed values"]} heading="h4">
+  <AccordionPanel>
+    New keys have been added to the default localization object. Add them to your existing configuration if you wish to customize them. Below you'll find the current values (as of writing this guide), if you wish to see the latest translations, go to the [en-US localization object](https://github.com/clerk/javascript/blob/main/packages/localizations/src/en-US.ts) on GitHub.
 
-- Delete the following localization keys from your custom localization object. They are not used anymore.
+    ```js
+    const newKeys = {
+      formFieldInputPlaceholder__confirmDeletionUserAccount: "Delete account",
+      formButtonPrimary__verify: "Verify",
+      signIn: {
+        forgotPassword: {
+          title: "Reset password",
+          subtitle_email: "First, enter the code sent to your email ID",
+          subtitle_phone: "First, enter the code sent to your phone",
+        },
+        alternativeMethods: {
+          subtitle: "Facing issues? You can use any of these methods to sign in.",
+          actionText: "Don’t have any of these?",
+        }
+      },
+      userProfile: {
+        mfaPhoneCodePage: {
+          backButton: "Use existing number",
+          successTitle: "SMS code verification enabled",
+          successMessage1:
+            "When signing in, you will need to enter a verification code sent to this phone number as an additional step.",
+          successMessage2:
+            "Save these backup codes and store them somewhere safe. If you lose access to your authentication device, you can use backup codes to sign in.",
+        },
+      },
+      userProfile: {
+        navbar: {
+          title: "Account",
+          description: "Manage your account info.",
+          account: "Profile",
+          security: "Security",
+        },
+        start: {
+          profileSection: {
+            primaryButton: "Edit Profile",
+          },
+        },
+      },
+      organizationProfile: {
+        navbar: {
+          title: "Organization",
+          description: "Manage your organization.",
+          general: "General",
+          members: "Members",
+        },
+        start: {
+          headerTitle__general: "General",
+          profileSection: {
+            title: "Organization Profile",
+            primaryButton: "Edit profile",
+            uploadAction__title: "Logo",
+          },
+        },
+        profilePage: {
+          domainSection: {
+            menuAction__verify: "Verify",
+            menuAction__remove: "Delete",
+            menuAction__manage: "Manage",
+          },
+        },
+        verifyDomainPage: {
+          title: "Verify domain",
+        },
+      },
+      unstable__errors: {
+        form_param_format_invalid__phone_number: "Phone number must be in a valid international format",
+      },
+    }
+    ```
 
-1. `signIn.forgotPassword.title_email`
-2. `signIn.forgotPassword.title_phone`
-3. `signIn.forgotPassword.formSubtitle_email`
-4. `signIn.forgotPassword.formSubtitle_phone`
-5. `signIn.emailCode.formSubtitle`
-6. `signIn.phoneCode.formSubtitle`
-7. `signIn.phoneCodeMfa.formSubtitle`
-8. `signIn.totpMfa.formSubtitle`
-9. `signIn.backupCodeMfa.formTitle`
-10. `signIn.backupCodeMfa.formSubtitle`
-11. `userProfile.start.emailAddressesSection.detailsTitle__primary`
-12. `userProfile.start.emailAddressesSection.detailsSubtitle__primary`
-13. `userProfile.start.emailAddressesSection.detailsTitle__nonPrimary`
-14. `userProfile.start.emailAddressesSection.detailsSubtitle__nonPrimary`
-15. `userProfile.start.emailAddressesSection.detailsTitle__unverified`
-16. `userProfile.start.emailAddressesSection.detailsSubtitle__unverified`
-17. `userProfile.start.emailAddressesSection.destructiveActionTitle`
-18. `userProfile.start.emailAddressesSection.destructiveActionSubtitle`
-19. `userProfile.start.phoneNumbersSection.detailsTitle__primary`
-20. `userProfile.start.phoneNumbersSection.detailsSubtitle__primary`
-21. `userProfile.start.phoneNumbersSection.detailsTitle__nonPrimary`
-22. `userProfile.start.phoneNumbersSection.detailsSubtitle__nonPrimary`
-23. `userProfile.start.phoneNumbersSection.detailsTitle__unverified`
-24. `userProfile.start.phoneNumbersSection.detailsSubtitle__unverified`
-25. `userProfile.start.phoneNumbersSection.destructiveActionTitle`
-26. `userProfile.start.phoneNumbersSection.destructiveActionSubtitle`
-27. `userProfile.start.connectedAccountsSection.title__conectionFailed`
-28. `userProfile.start.connectedAccountsSection.title__connectionFailed`
-29. `userProfile.start.connectedAccountsSection.title__reauthorize`
-30. `userProfile.start.connectedAccountsSection.subtitle__reauthorize`
-31. `userProfile.start.connectedAccountsSection.actionLabel__conectionFailed`
-32. `userProfile.start.connectedAccountsSection.destructiveActionSubtitle`
-33. `userProfile.start.connectedAccountsSection.destructiveActionAccordionSubtitle`
-34. `userProfile.start.mfaSection.phoneCode.destructiveActionTitle`
-35. `userProfile.start.mfaSection.phoneCode.destructiveActionSubtitle`
-36. `userProfile.start.mfaSection.phoneCode.title__default`
-37. `userProfile.start.mfaSection.phoneCode.title__setDefault`
-38. `userProfile.start.mfaSection.phoneCode.subtitle__default`
-39. `userProfile.start.mfaSection.phoneCode.subtitle__setDefault`
-40. `userProfile.start.mfaSection.totp.title`
-41. `userProfile.start.mfaSection.totp.subtitle`
-42. `userProfile.start.mfaSection.totp.destructiveActionSubtitle`
-43. `userProfile.start.mfaSection.totp.destructiveActionLabel`
-44. `userProfile.start.activeDevicesSection.primaryButton`
-45. `userProfile.start.activeDevicesSection.detailsTitle`
-46. `userProfile.start.activeDevicesSection.detailsSubtitle`
-47. `userProfile.start.activeDevicesSection.destructiveActionTitle`
-48. `userProfile.start.activeDevicesSection.destructiveActionSubtitle`
-49. `userProfile.start.web3WalletsSection.destructiveActionTitle`
-50. `userProfile.start.web3WalletsSection.destructiveActionSubtitle`
-51. `userProfile.start.dangerSection.deleteAccountTitle`
-52. `userProfile.start.dangerSection.deleteAccountDescription`
-53. `userProfile.start.headerSubtitle__account`
-54. `userProfile.start.headerSubtitle__security`
-55. `organizationProfile.start.headerTitle__settings`
-56. `organizationProfile.start.headerSubtitle__members`
-57. `organizationProfile.start.headerSubtitle__settings`
-58. `organizationProfile.profilePage.domainSection.unverifiedDomain_menuAction__verify`
-59. `organizationProfile.profilePage.domainSection.unverifiedDomain_menuAction__remove`
-60. `organizationProfile.profilePage.subtitle`
-61. `organizationProfile.membersPage.start.headerTitle__active`
-62. `organizationProfile.membersPage.start.headerTitle__invited`
-63. `createOrganization.subtitle`
-64. `formFieldLabel__emailAddress_phoneNumber`
-65. `formFieldLabel__phoneNumber_username`
-66. `formFieldLabel__emailAddress_phoneNumber_username`
-67. `formFieldInputPlaceholder__emailAddress_phoneNumber`
-68. `formFieldInputPlaceholder__phoneNumber_username`
-69. `formFieldInputPlaceholder__emailAddress_phoneNumber_username`
-70. `userProfile.phoneNumberPage.infoText__secondary`
-71. `userProfile.mfaPhoneCodePage.successMessage`
+    You could add these new keys to your existing configuration by using lodash's [`merge` function](https://lodash.com/docs/#merge).
 
-- The following localization key values have changed. You can find the `en-US` values in the [en-US localization object](https://github.com/clerk/javascript/blob/main/packages/localizations/src/en-US.ts).
+    ```js
+    import { merge } from "lodash-es"
 
-1. `formFieldLabel__organizationName`
-2. `formFieldLabel__organizationSlug`
-3. `formFieldInputPlaceholder__emailAddresses`
-4. `signUp.start.subtitle`
-5. `signUp.start.actionText`
-6. `signUp.emailCode.subtitle`
-7. `signUp.phoneCode.subtitle`
-8. `signUp.continue.subtitle`
-9. `signUp.continue.actionText`
-10. `signIn.start.title`
-11. `signIn.start.subtitle`
-12. `signIn.start.actionText`
-13. `signIn.password.subtitle`
-14. `signIn.forgotPasswordAlternativeMethods.label__alternativeMethods`
-15. `signIn.resetPassword.title`
-16. `signIn.phoneCodeMfa.subtitle`
-17. `signIn.totpMfa.subtitle`
-18. `signIn.backupCodeMfa.subtitle`
-19. `userProfile.formButtonPrimary__continue`
-20. `userProfile.start.headerTitle__account`
-21. `userProfile.start.emailAddressesSection.detailsAction__unverified`
-22. `userProfile.start.emailAddressesSection.destructiveAction`
-23. `userProfile.start.mfaSection.phoneCode.destructiveActionLabel`
-24. `userProfile.start.mfaSection.backupCodes.actionLabel__regenerate`
-25. `userProfile.start.dangerSection.title`
-26. `userProfile.profilePage.imageFormSubtitle`
-27. `userProfile.profilePage.imageFormDestructiveActionSubtitle`
-28. `userProfile.profilePage.fileDropAreaHint`
-29. `userProfile.deletePage.actionDescription`
-30. `organizationSwitcher.action__createOrganization`
-31. `organizationSwitcher.action__manageOrganization`
-32. `organizationProfile.profilePage.title`
-33. `organizationProfile.profilePage.dangerSection.leaveOrganization.actionDescription`
-34. `organizationProfile.profilePage.dangerSection.deleteOrganization.actionDescription`
-35. `organizationProfile.invitePage.title`
-36. `organizationProfile.invitePage.subtitle`
-37. `organizationList.title`
-38. `organizationList.titleWithoutPersonal`
-39. `userProfile.phoneNumberPage.title`
-40. `userProfile.phoneNumberPage.infoText`
-41. `userProfile.mfaPhoneCodePage.subtitle__availablePhoneNumbers`
-42. `userProfile.mfaPhoneCodePage.subtitle__unavailablePhoneNumbers`
+    const localization = merge({}, yourOldOject, newKeys)
+    ```
+  </AccordionPanel>
+  <AccordionPanel>
+    Some keys have been deleted from the default localization object. They are not used anymore and won't have any effect.
 
+    ```js
+    const deletedKeys = [
+      "signIn.forgotPassword.title_email"
+      "signIn.forgotPassword.title_phone"
+      "signIn.forgotPassword.formSubtitle_email"
+      "signIn.forgotPassword.formSubtitle_phone"
+      "signIn.emailCode.formSubtitle"
+      "signIn.phoneCode.formSubtitle"
+      "signIn.phoneCodeMfa.formSubtitle"
+      "signIn.totpMfa.formSubtitle"
+      "signIn.backupCodeMfa.formTitle"
+      "signIn.backupCodeMfa.formSubtitle"
+      "userProfile.start.emailAddressesSection.detailsTitle__primary"
+      "userProfile.start.emailAddressesSection.detailsSubtitle__primary"
+      "userProfile.start.emailAddressesSection.detailsTitle__nonPrimary"
+      "userProfile.start.emailAddressesSection.detailsSubtitle__nonPrimary"
+      "userProfile.start.emailAddressesSection.detailsTitle__unverified"
+      "userProfile.start.emailAddressesSection.detailsSubtitle__unverified"
+      "userProfile.start.emailAddressesSection.destructiveActionTitle"
+      "userProfile.start.emailAddressesSection.destructiveActionSubtitle"
+      "userProfile.start.phoneNumbersSection.detailsTitle__primary"
+      "userProfile.start.phoneNumbersSection.detailsSubtitle__primary"
+      "userProfile.start.phoneNumbersSection.detailsTitle__nonPrimary"
+      "userProfile.start.phoneNumbersSection.detailsSubtitle__nonPrimary"
+      "userProfile.start.phoneNumbersSection.detailsTitle__unverified"
+      "userProfile.start.phoneNumbersSection.detailsSubtitle__unverified"
+      "userProfile.start.phoneNumbersSection.destructiveActionTitle"
+      "userProfile.start.phoneNumbersSection.destructiveActionSubtitle"
+      "userProfile.start.connectedAccountsSection.title__conectionFailed"
+      "userProfile.start.connectedAccountsSection.title__connectionFailed"
+      "userProfile.start.connectedAccountsSection.title__reauthorize"
+      "userProfile.start.connectedAccountsSection.subtitle__reauthorize"
+      "userProfile.start.connectedAccountsSection.actionLabel__conectionFailed"
+      "userProfile.start.connectedAccountsSection.destructiveActionSubtitle"
+      "userProfile.start.connectedAccountsSection.destructiveActionAccordionSubtitle"
+      "userProfile.start.mfaSection.phoneCode.destructiveActionTitle"
+      "userProfile.start.mfaSection.phoneCode.destructiveActionSubtitle"
+      "userProfile.start.mfaSection.phoneCode.title__default"
+      "userProfile.start.mfaSection.phoneCode.title__setDefault"
+      "userProfile.start.mfaSection.phoneCode.subtitle__default"
+      "userProfile.start.mfaSection.phoneCode.subtitle__setDefault"
+      "userProfile.start.mfaSection.totp.title"
+      "userProfile.start.mfaSection.totp.subtitle"
+      "userProfile.start.mfaSection.totp.destructiveActionSubtitle"
+      "userProfile.start.mfaSection.totp.destructiveActionLabel"
+      "userProfile.start.activeDevicesSection.primaryButton"
+      "userProfile.start.activeDevicesSection.detailsTitle"
+      "userProfile.start.activeDevicesSection.detailsSubtitle"
+      "userProfile.start.activeDevicesSection.destructiveActionTitle"
+      "userProfile.start.activeDevicesSection.destructiveActionSubtitle"
+      "userProfile.start.web3WalletsSection.destructiveActionTitle"
+      "userProfile.start.web3WalletsSection.destructiveActionSubtitle"
+      "userProfile.start.dangerSection.deleteAccountTitle"
+      "userProfile.start.dangerSection.deleteAccountDescription"
+      "userProfile.start.headerSubtitle__account"
+      "userProfile.start.headerSubtitle__security"
+      "organizationProfile.start.headerTitle__settings"
+      "organizationProfile.start.headerSubtitle__members"
+      "organizationProfile.start.headerSubtitle__settings"
+      "organizationProfile.profilePage.domainSection.unverifiedDomain_menuAction__verify"
+      "organizationProfile.profilePage.domainSection.unverifiedDomain_menuAction__remove"
+      "organizationProfile.profilePage.subtitle"
+      "organizationProfile.membersPage.start.headerTitle__active"
+      "organizationProfile.membersPage.start.headerTitle__invited"
+      "createOrganization.subtitle"
+      "formFieldLabel__emailAddress_phoneNumber"
+      "formFieldLabel__phoneNumber_username"
+      "formFieldLabel__emailAddress_phoneNumber_username"
+      "formFieldInputPlaceholder__emailAddress_phoneNumber"
+      "formFieldInputPlaceholder__phoneNumber_username"
+      "formFieldInputPlaceholder__emailAddress_phoneNumber_username"
+      "userProfile.phoneNumberPage.infoText__secondary"
+      "userProfile.mfaPhoneCodePage.successMessage"
+    ]
+    ```
+
+    We recommend removing these keys from your custom localization object. Alternatively, if you want to automate this, you could use lodash's [`omit` function](https://lodash.com/docs/#omit). Please note that this function can get slow on large objects.
+
+    ```js
+    import { omit } from "lodash-es"
+
+    const localization = omit(yourOldOject, deletedKeys)
+    ```
+
+    For example, run this function once and save the output as your new object.
+  </AccordionPanel>
+  <AccordionPanel>
+    The values of some keys have been changed on the default [en-US localization object](https://github.com/clerk/javascript/blob/main/packages/localizations/src/en-US.ts). The list below shows you the new defaults (as of writing this guide) which you can either use or overwrite.
+
+    ```js
+    const newValues = {
+      formFieldLabel__organizationName: 'Name',
+      formFieldLabel__organizationSlug: 'Slug',
+      formFieldInputPlaceholder__emailAddresses: 'example@email.com, example2@email.com',
+      signUp: {
+        start: {
+          subtitle: 'Welcome! Please fill in the details to get started.',
+          actionText: 'Already have an account?',
+        },
+        emailCode: {
+          subtitle: 'Enter the verification code sent to your email',
+        },
+        phoneCode: {
+          subtitle: 'Enter the verification code sent to your phone',
+        },
+        continue: {
+          subtitle: 'Please fill in the remaining details to continue.',
+          actionText: 'Already have an account?',
+        },
+      },
+      signIn: {
+        start: {
+          title: 'Sign in to {{applicationName}}',
+          subtitle: 'Welcome back! Please sign in to continue',
+          actionText: 'Don’t have an account?',
+        },
+        password: {
+          subtitle: 'Enter the password associated with your account',
+        },
+        forgotPasswordAlternativeMethods: {
+          label__alternativeMethods: 'Or, sign in with another method',
+        },
+        resetPassword: {
+          title: 'Set new password',
+        },
+        phoneCodeMfa: {
+          subtitle: 'To continue, please enter the verification code sent to your phone',
+        },
+        totpMfa: {
+          subtitle: 'To continue, please enter the verification code generated by your authenticator app',
+        },
+        backupCodeMfa: {
+          subtitle: 'Your backup code is the one you got when setting up two-step authentication.',
+        },
+      },
+      userProfile: {
+        formButtonPrimary__continue: 'Save',
+        start: {
+          headerTitle__account: 'Profile',
+          emailAddressesSection: {
+            detailsAction__unverified: 'Verify',
+            destructiveAction: 'Remove email',
+          },
+          mfaSection: {
+            phoneCode: {
+              destructiveActionLabel: 'Remove',
+            },
+            backupCodes: {
+              actionLabel__regenerate: 'Regenerate',
+            },
+          },
+          dangerSection: {
+            title: 'Account termination',
+          },
+        },
+        profilePage: {
+          imageFormSubtitle: 'Upload',
+          imageFormDestructiveActionSubtitle: 'Remove',
+        },
+        phoneNumberPage: {
+          title: 'Add a phone number',
+          infoText:
+            'A text message containing a verification link will be sent to this phone number. Message and data rates may apply.',
+        },
+        mfaPhoneCodePage: {
+          subtitle__availablePhoneNumbers:
+            'Select an existing phone number to register for SMS code two-step verification or add a new one.',
+          subtitle__unavailablePhoneNumbers:
+            'There are no available phone numbers to register for SMS code two-step verification, please add a new one.',
+        },
+        deletePage: {
+          actionDescription: 'Type "Delete account" below to continue.',
+        },
+      },
+      organizationSwitcher: {
+        action__createOrganization: 'Create organization',
+        action__manageOrganization: 'Manage',
+      },
+      organizationProfile: {
+        profilePage: {
+          title: 'Update Profile',
+          dangerSection: {
+            title: 'Danger',
+            leaveOrganization: {
+              actionDescription: 'Type "{{organizationName}}" below to continue.',
+            },
+            deleteOrganization: {
+              actionDescription: 'Type "{{organizationName}}" below to continue.',
+            },
+          },
+        },
+        invitePage: {
+          title: 'Invite new members',
+          subtitle: 'Enter or paste one or more email addresses, separated by spaces or commas.',
+        },
+      },
+      organizationList: {
+        title: 'Choose an account',
+        titleWithoutPersonal: 'Choose an organization',
+      },
+    }
+    ```
+
+    You could add these new keys to your existing configuration by using lodash's [`merge` function](https://lodash.com/docs/#merge).
+
+    ```js
+    import { merge } from "lodash-es"
+
+    const localization = merge({}, yourOldOject, newValues)
+    ```
+  </AccordionPanel>
+</Accordion>
 
 ### `@clerk/nextjs`
 
