--- a/docs/quickstarts/gatsby.mdx
+++ b/docs/quickstarts/gatsby.mdx
@@ -10,7 +10,7 @@ Learn how to use Clerk to quickly and easily add secure authentication and user 
 <Steps>
 ### Install `gatsby-plugin-clerk`
 
-Once you have a React application ready, you need to install Clerk's React SDK. This gives you access to our prebuilt components and hooks for React applications.
+Once you have a Gatsby application ready, you need to install Clerk's `gatsby-plugin-clerk` SDK. This gives you access to our prebuilt components and hooks for React applications.
 
 <CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
   ```bash filename="terminal"
