fix(v5-upgrade-guide): Update paginated methods return values
https://github.com/clerk/javascript/pull/2491

--- a/docs/references/javascript/organization/members.mdx
+++ b/docs/references/javascript/organization/members.mdx
@@ -31,7 +31,7 @@ function getMemberships(params?: GetMembersParams): Promise<PaginatedResponse<Or
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[PaginatedResponse][pag-ref]\<[OrganizationMembership][org-mem-ref]\>></code> | This method returns a `Promise` which resolves with a [`PaginatedResponse`][pag-ref] of [`OrganizationMembership`][org-mem-ref] objects. |
+| <code>Promise\<[PaginatedResponse][pag-ref]\<[OrganizationMembership][org-mem-ref]\>></code> | This method returns a `Promise` which resolves with a [`PaginatedResponse`][pag-ref] of [`OrganizationMembership`][org-mem-ref] objects or rejects with `ClerkAPIResponseError` or Network error. |
 
 ## `addMember()`
 
