--- a/docs/references/javascript/organization/invitations.mdx
+++ b/docs/references/javascript/organization/invitations.mdx
@@ -27,7 +27,7 @@ function getInvitations(params?: GetInvitationsParams): Promise<PaginatedResourc
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[PaginatedResponse][pag-res-ref]\<[OrganizationInvitation][orginv-ref]\>></code> | This method returns a `Promise` which resolves with a list of [`OrganizationInvitation`][orginv-ref] objects. |
+| <code>Promise\<[PaginatedResponse][pag-res-ref]\<[OrganizationInvitation][orginv-ref]\>></code> | This method returns a `Promise` which resolves with a list of [`OrganizationInvitation`][orginv-ref] objects or rejects with `ClerkAPIResponseError` or Network error.|
 
 ## `inviteMember()`
 
