--- a/docs/references/javascript/user/user.mdx
+++ b/docs/references/javascript/user/user.mdx
@@ -160,7 +160,7 @@ Retrieves all of the organizations the user is a member of.
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[PaginatedResponse](/docs/references/javascript/types/clerk-paginated-response)\<OrganizationMembershipResource\>\></code> | The list of organizations the user is a member of. |
+| <code>Promise\<[PaginatedResponse](/docs/references/javascript/types/clerk-paginated-response)\<OrganizationMembershipResource\>\></code> | The list of organizations the user is a member of or rejects with `ClerkAPIResponseError` or Network error. |
 
 {/* TODO: We might need to create a doc page that covers OrganizationMembershipResource */}
 
