revert paginated error changes

--- a/docs/references/javascript/organization/membership-request.mdx
+++ b/docs/references/javascript/organization/membership-request.mdx
@@ -27,7 +27,7 @@ function getMembershipRequests(params?: GetMembershipRequestParams): Promise<Pag
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[PaginatedResponse][pag-res-ref]\<[OrganizationMembershipRequest][mem-request-ref]\>></code> | This method returns a `Promise` which resolves with a list of `OrganizationMembershipRequest` objects or rejects with `ClerkAPIResponseError` or Network error. |
+| <code>Promise\<[PaginatedResponse][pag-res-ref]\<[OrganizationMembershipRequest][mem-request-ref]\>></code> | This method returns a `Promise` which resolves with a list of `OrganizationMembershipRequest` objects. |
 
 [mem-request-ref]: /docs/references/javascript/organization-membership-request
 [pag-res-ref]: /docs/references/javascript/types/clerk-paginated-response
