--- a/docs/references/javascript/organization/members.mdx
+++ b/docs/references/javascript/organization/members.mdx
@@ -12,7 +12,7 @@ These are all methods on the [Organization](/docs/references/javascript/organiza
 Retrieve the members of the currently active organization.
 
 ```typescript
-function getMemberships(params?: GetMembersParams): Promise<PaginatedResponse<OrganizationMembership>>;
+function getMemberships(params?: GetMembersParams): Promise<ClerkPaginatedResponse<OrganizationMembership>>;
 ```
 
 ### `GetMembersParams`
@@ -31,7 +31,7 @@ function getMemberships(params?: GetMembersParams): Promise<PaginatedResponse<Or
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[PaginatedResponse][pag-ref]\<[OrganizationMembership][org-mem-ref]\>></code> | This method returns a `Promise` which resolves with a [`PaginatedResponse`][pag-ref] of [`OrganizationMembership`][org-mem-ref] objects. |
+| <code>Promise\<[ClerkPaginatedResponse][pag-ref]\<[OrganizationMembership][org-mem-ref]\>></code> | This method returns a `Promise` which resolves with a [`ClerkPaginatedResponse`][pag-ref] of [`OrganizationMembership`][org-mem-ref] objects. |
 
 ## `addMember()`
 
