--- a/docs/references/javascript/types/clerk-paginated-response.mdx
+++ b/docs/references/javascript/types/clerk-paginated-response.mdx
@@ -13,3 +13,7 @@ An interface that describes the response of a method that returns a paginated li
 | --- | --- | --- |
 | `data` | `T[]` |  An array that contains the fetched data. |
 | `total_count` | `number` |  The total count of data that exist remotely. |
+
+## Error handling
+
+Clerk's SDKs always use `Promise<ClerkPaginatedResponse<T>>`. If the promise resolves you'll get back the [properties](#properties), if it's rejected you'll receive a `ClerkAPIResponseError` or network error.
